@@ -228,12 +228,14 @@ See <b>sample.tmdarc</b> for more client options.
 
 <li>Mail User Agent (MUA) configuration:<br><br>
 
-To have TMDA read your configuration each time you send outgoing mail and
-modify your sender address accordingly, you must arrange for your MUA
-to call the included sendmail compatibility wrapper
-<B>(tmda-sendmail)</B>.  Here is how to accomplish this for a few
-popular MUAs.  Let me know if you are using TMDA with a MUA not listed
-here.<br><br>
+To have TMDA read your configuration each time you send outgoing mail
+and modify your sender address accordingly, you must arrange for your
+MUA to call the included sendmail compatibility wrapper
+<B>(tmda-sendmail)</B>.  tmda-sendmail will use the address set by
+your MUA as the base for your tagged address.  Here is how to
+accomplish this for a few popular MUAs.  Let me know if you are using
+TMDA with a MUA not listed here.
+<br><br>
 
 <ul>
 <li>For BSD Mail/mailx, add the following line to your .mailrc file:<br>
